--- a/biletter/src/main/resources/static/index.html
+++ b/biletter/src/main/resources/static/index.html
@@ -12,13 +12,8 @@
             <h1>Bestilling av kinobiletter</h1>
             <form class="form">
                 <div class="form-group">
-                    <label for="velg">Velg Film: </label>
-                    <select id="velg" name="Velg film">
-                        <option>The Hunger Games: The Ballad of Songbirds & Snakes</option>
-                        <option>Dune: Part Two</option>
-                        <option>Wonka</option>
-                        <option>Damsel</option>
-                    </select>
+                    <label for="movie">Velg Film: </label>
+                    <div id="movie" class="dropdown"></div>
                 </div>
                 <div class="form-group">
                     <label for="antall">Antall  </label>
