a little more styling

--- a/biletter/src/main/resources/static/index.html
+++ b/biletter/src/main/resources/static/index.html
@@ -17,25 +17,25 @@
                 </div>
                 <div class="form-group">
                     <label for="antall">Antall  </label>
-                    <input type="text" class="control" id="antall"><span id="feilantall"></span>
+                    <input type="text" class="form-control" id="antall"><span id="feilantall"></span>
                 </div>
             </form>
             <table class="table">
                 <tr class="table-group">
                     <td>Fornavn</td>
-                    <td><input type="text" class="control" id="fNavn"></td><td id="feilnavn"></td>
+                    <td><input type="text" class="form-control" id="fNavn"></td><td id="feilnavn"></td>
                 </tr>
                 <tr class="table-group">
                     <td>Etternavn</td>
-                    <td><input type="text" class="control" id="eNavn"></td><td id="feilenavn"></td>
+                    <td><input type="text" class="form-control" id="eNavn"></td><td id="feilenavn"></td>
                 </tr>
                 <tr class="table-group">
                     <td>Telefonnr</td>
-                    <td><input type="text" class="control" id="telefonnr"></td><td id="feilnummer"></td>
+                    <td><input type="text" class="form-control" id="telefonnr"></td><td id="feilnummer"></td>
                 </tr>
                 <tr class="table-group">
                     <td>Epost</td>
-                    <td><input type="text" class="control" id="ePost"></td><td id="feilepost"></td>
+                    <td><input type="text" class="form-control" id="ePost"></td><td id="feilepost"></td>
                 </tr>
             </table><br>
             <button class="btn btn-primary" onclick="kjop()" type="button">Kjøp bilett</button>
