added errormessages and comments

--- a/biletter/src/main/resources/static/index.html
+++ b/biletter/src/main/resources/static/index.html
@@ -39,11 +39,14 @@
                 </tr>
             </table><br>
             <button class="btn btn-primary" onclick="kjop()" type="button">Kjøp bilett</button>
+            <div id="saveerror"></div>
         </div>
         <div class="col-md-8">
             <h2>Alle biletter</h2>
             <div id="customerRegistry"></div>
+            <div id="fetcherror"></div>
             <button class="btn btn-danger" onclick="slett()">Slett alle bilettene</button>
+            <div id="deleteerror"></div>
         </div>
     </div>
 </div>
