added more comments

--- a/biletter/src/main/resources/static/index.html
+++ b/biletter/src/main/resources/static/index.html
@@ -39,7 +39,7 @@
                 </tr>
             </table><br>
             <button class="btn btn-primary" onclick="kjop()" type="button">Kjøp bilett</button>
-            <div id="saveerror"></div>
+            <div id="saveerror" style="color: deeppink"></div>
         </div>
         <div class="col-md-8">
             <h2>Alle biletter</h2>
